WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98358
[GTK] accessibility/aria-scrollbar-role.html is failing
https://bugs.webkit.org/show_bug.cgi?id=98358
Summary
[GTK] accessibility/aria-scrollbar-role.html is failing
Zan Dobersek
Reported
2012-10-04 00:35:15 PDT
accessibility/aria-scrollbar-role.html is failing on all GTK platforms.
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#group=%40ToT%20-%20webkit.org&tests=accessibility%2Faria-scrollbar-role.html
Attachments
Patch
(8.00 KB, patch)
2013-03-18 08:03 PDT
,
Krzysztof Czech
mrobinson
: review-
Details
Formatted Diff
Diff
Patch
(7.91 KB, patch)
2013-03-19 03:56 PDT
,
Krzysztof Czech
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Krzysztof Czech
Comment 1
2013-03-18 08:03:04 PDT
Created
attachment 193565
[details]
Patch
Martin Robinson
Comment 2
2013-03-18 08:08:02 PDT
Comment on
attachment 193565
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=193565&action=review
Some unnecessary string duplication going on, but otherwise looks good to me. :)
> Tools/DumpRenderTree/atk/AccessibilityUIElementAtk.cpp:514 > + GOwnPtr<gchar> axOrientation; > + if (checkElementState(m_element, ATK_STATE_HORIZONTAL)) > + axOrientation.set(g_strdup_printf("AXOrientation: AXHorizontalOrientation")); > + else if (checkElementState(m_element, ATK_STATE_VERTICAL)) > + axOrientation.set(g_strdup_printf("AXOrientation: AXVerticalOrientation")); > + > + if (!axOrientation) > + return JSStringCreateWithCharacters(0, 0); > + > + return JSStringCreateWithUTF8CString(axOrientation.get());
See below.
> Tools/WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:552 > + GOwnPtr<gchar> axOrientation; > + if (checkElementState(m_element, ATK_STATE_HORIZONTAL)) > + axOrientation.set(g_strdup_printf("AXOrientation: AXHorizontalOrientation")); > + else if (checkElementState(m_element, ATK_STATE_VERTICAL)) > + axOrientation.set(g_strdup_printf("AXOrientation: AXVerticalOrientation")); > +
g_strdump_printf can just be g_strdump and even more simply can just be like this: const char* axOrientation = 0; if (checkElementState(m_element, ATK_STATE_HORIZONTAL)) axOrientation = "AXOrientation: AXHorizontalOrientation"; ...
Martin Robinson
Comment 3
2013-03-18 08:08:40 PDT
Would love to have Joanie or Mario double-check this one.
Mario Sanchez Prada
Comment 4
2013-03-19 03:18:32 PDT
(In reply to
comment #3
)
> Would love to have Joanie or Mario double-check this one.
I agree with martin comments and suggestions. Apart from that, the patch looks good to me, a11y-wise.
Krzysztof Czech
Comment 5
2013-03-19 03:56:37 PDT
Created
attachment 193782
[details]
Patch
Krzysztof Czech
Comment 6
2013-03-19 04:00:34 PDT
(In reply to
comment #4
)
> (In reply to
comment #3
) > > Would love to have Joanie or Mario double-check this one. > > I agree with martin comments and suggestions. Apart from that, the patch looks good to me, a11y-wise.
Thanks. Applied Martin's suggestions
WebKit Review Bot
Comment 7
2013-03-20 01:14:37 PDT
Comment on
attachment 193782
[details]
Patch Clearing flags on attachment: 193782 Committed
r146312
: <
http://trac.webkit.org/changeset/146312
>
WebKit Review Bot
Comment 8
2013-03-20 01:14:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug