[GTK] accessibility/aria-scrollbar-role.html is failing https://bugs.webkit.org/show_bug.cgi?id=98358

Patch by Krzysztof Czech <k.czech@samsung.com> on 2013-03-20
Reviewed by Martin Robinson.

Source/WebCore:

Adds support for checking an orientation attribute of accessibility object.
AccessibilityObject that represents ScrollBar element should be ATK_VALUE type.
ScrollBar element can be considered as a Range Widget that is able to expose some
range values.

Test: accessibility/aria-scrollbar-role.html

* accessibility/atk/WebKitAccessibleWrapperAtk.cpp:
(setAtkStateSetFromCoreObject):
(getInterfaceMaskFromObject):

Tools:

Adds support for checking accessibility object's orientation.
Orientation is checked by retrieving proper state of accessibility object.

* DumpRenderTree/atk/AccessibilityUIElementAtk.cpp:
(checkElementState):
(AccessibilityUIElement::orientation):
* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::orientation):

LayoutTests:

Fixed failing test.

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/131106@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146312 268f45cc-cd09-0410-ab3c-d52691b4dbfc